--- a/teladeloginsicob.html
+++ b/teladeloginsicob.html
@@ -13,7 +13,7 @@
             
         }
         div{
-            background-color: black;
+            background-color: rgba(0,0,0, 0.9);
             position: absolute;
             top: 50%;
             left: 50%;
