--- a/teladeloginsicob.html
+++ b/teladeloginsicob.html
@@ -8,7 +8,7 @@
 
     <style>
         body{
-            font-family: Arial;
+            font-family:Arial, Helvetica, sans-serif;
             background-image:linear-gradient(45deg,cyan,yellow)
             
         }
